--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -218,7 +218,7 @@ In order to compare the mean IOIs between the teaching and performing condition,
 \hypertarget{key-overlap-time-kot}{%
 \subsubsection{2.2.2. Key-Overlap Time (KOT)}\label{key-overlap-time-kot}}
 
-Blah
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) revealed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,30) = 1158, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.94) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,30) = 8.31, \emph{p} = 0.007, \(\eta_G^2\) = 0.01). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition than in the performing condition (\emph{p} = 0.004) while there was no significant difference in legato between the teaching and performing condition (\emph{p} = 0.32).
 
 \hypertarget{key-velocity-kv}{%
 \subsubsection{2.2.3. Key Velocity (KV)}\label{key-velocity-kv}}
@@ -251,7 +251,7 @@ Blah
 \hypertarget{key-overlap-time-kot-1}{%
 \subsubsection{2.3.4. Key-Overlap Time (KOT)}\label{key-overlap-time-kot-1}}
 
-Blah
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) revealed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 377, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.31), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,30) = 0.423, \emph{p} = 0.520, \(\eta_G^2\) = 0.00) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,30) = 0.000, \emph{p} = 0.987, \(\eta_G^2\) = 0.00).
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-1-1} \caption{\label{fig:ioi-1}Experiment 1: IOIs (ms) when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-1}
@@ -310,7 +310,7 @@ A paired-sample \emph{t}-test showed that participants played more slowly in the
 \hypertarget{key-overlap-ratio-kor}{%
 \subsubsection{3.2.2. Key-Overlap Ratio (KOR)}\label{key-overlap-ratio-kor}}
 
-Blah
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,18) = 2324, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.98) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,18) = 6.90, \emph{p} = 0.017, \(\eta_G^2\) = 0.01). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition than in the performing condition (\emph{p} = 0.001) while there was no significant difference in legato between the teaching and performing condition (\emph{p} = 0.85).
 
 \hypertarget{key-velocity-kv-2}{%
 \subsubsection{3.2.3. Key Velocity (KV)}\label{key-velocity-kv-2}}
@@ -343,14 +343,14 @@ Blah
 \hypertarget{key-overlap-ratio-kor-1}{%
 \subsubsection{3.3.4. Key-Overlap Ratio (KOR)}\label{key-overlap-ratio-kor-1}}
 
-Blah
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 559, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.93), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,18) = 0.016, \emph{p} = 0.902, \(\eta_G^2\) = 0.00) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 0.576, \emph{p} = 0.458, \(\eta_G^2\) = 0.00).
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-2-1} \caption{\label{fig:ioi-2}Experiment 2: Normalised IOIs when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-2}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-kot-2-1} \caption{\label{fig:kot-1}Experiment 2: KOR when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-kot-2}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-kot-2-1} \caption{\label{fig:kot-2}Experiment 2: KOR when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-kot-2}
 \end{figure}
 
 \hypertarget{discussion-1}{%
